k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: helmet-web-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: helmet-web
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: helmet-web
    spec:
      containers:
        - name: helmet-web
          image: gcr.io/zerno-dispatcher/bitbucket.org/lbseb/web.helmets:0bb70640699810224dc87594dd7984d0e40273ca
          ports:
            - containerPort: 80
