k8s/nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: helmets-web-nodeport
spec:
  type: NodePort
  selector:
    app: helmet-web
  ports:
    - name: http
      port: 80
      targetPort: 80
      protocol: TCP
